<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LEDoPiano</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome!</string>
    <string name="actMain_but1">Choisir un morceau</string>
    <string name="actMain_but2">Rentrer une grille d\'accord</string>
    <string name="actMain_but3">Afficher une gamme</string>
    <string name="actMain_but4">Lecture seule</string>
    <string name="actMain_bluetooth">Connexion bandeau</string>
    <string name="actMain_quit">Quitter</string>
    <string name="ok">OK</string>
    
    <string name="biblio">Appel à la bibliothèque de musique du smartphone</string>
    <string name="biblio2">Continuer</string>
    <string name="biblio_editText">Tapez le nom d\'un morceau</string>
    
    <string name="choix_title">Choix du morceau</string>
    <string name="choix_but1">Base de données</string>
    <string name="choix_but2">Bibliothèque</string>
    <string name="choix_text">Morceau sélectionné</string>
    <string name="choix_but3">C\'est parti !</string>
    
    <string name="grille_play">Jouer</string>
    
    <string name="lecture_title">Lecture en cours</string>
    <string name="lecture_name">Nom du morceau</string>
    <string name="lecture_play">Play / Pause</string>
    <string name="lecture_stop">Stop</string>
    
    <string name="gamme_title">Choisir la gamme</string>
    <string name="tempo">Tempo (bpm)</string>
    <string name="chiffrage">Chiffrage</string>
    <string name="nom_grille">Nom de la grille</string>
    <string name="save">Sauver</string>
    <string name="load">Charger</string>
    <string name="accords">Accords</string>
    <string name="accompagnement">Accompagnement</string>
    
</resources>
